--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,11 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.projectlombok:lombok:1.18.16'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation group: 'org.springframework', name: 'spring-tx'
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
+
 
 }
 
